--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@capacitor-community/electron": "^4.0.3",
     "@capacitor/android": "3.3.3",
     "@capacitor/app": "1.0.7",
     "@capacitor/core": "3.3.3",
